--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_home">Igra učenja</string>
+    <string name="menu_settings">Postavke</string>
+    <string name="menu_statistics">Statistika</string>
+    <string name="menu_info">Info o igri</string>
 </resources>
