--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,11 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Igra učenja</string>
+    <string name="menu_home">Početna</string>
     <string name="menu_settings">Postavke</string>
     <string name="menu_statistics">Statistika</string>
     <string name="menu_info">Info o igri</string>
+    <string name="menu_game">Igra učenja</string>
     <string name="start_game">Započni igru</string>
     <string name="home_label">Pozdrav, %1$s!</string>
 </resources>
