--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="menu_game">Igra učenja</string>
     <string name="start_game">Započni igru</string>
     <string name="home_label">Pozdrav, %1$s!</string>
+    <string name="level_1">Level 1</string>
+    <string name="level_2">Level 2</string>
+    <string name="level_3">Level 3</string>
+    <string name="round_label">%1$s/%2$s</string>
+    <string name="games_question_level_1">Odaberi točan pojam:</string>
+    <string name="games_question_level_2">Što je na slici? Napiši:</string>
 </resources>
