Refactor game handling

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,10 @@
     <string name="level_2">Level 2</string>
     <string name="level_3">Level 3</string>
     <string name="round_label">%1$s/%2$s</string>
-    <string name="games_question_level_1">Odaberi točan pojam:</string>
+    <string name="games_question_level_1_colors">Koju boju vidiš na slici?</string>
+    <string name="games_question_level_1_animals">Koju životinju vidiš na slici?</string>
+    <string name="games_question_level_1_food">Koju hranu vidiš na slici?</string>
+    <string name="games_question_level_1_object">Koji predmet vidiš na slici?</string>
     <string name="games_question_level_2">Što je na slici? Napiši:</string>
     <string name="btn_check">Provjeri</string>
     <string name="btn_continue">Nastavi</string>
